Rest endpoints using Jersey

--- a/GreetingApp/src/main/resources/application.properties
+++ b/GreetingApp/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+################################## Profiles Configurations #################################
+spring.profiles.active=dev
+
+################################## Logging Configurations ################################## 
+logging.file.name=test
+logging.level.root=INFO 
+# TRACE, DEBUG, INFO, WARN, ERROR, FATAL, or OFF
+
+############################################################################################
